cmake_minimum_required(VERSION 2.8)

project(lambert)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
find_package(MPFR REQUIRED)

option(CUNIT_TEST "CUNIT_TEST" OFF)
option(DEBUG "Display itermediate values" OFF)
	

SET(RESOURCES_PATH ${CMAKE_INSTALL_PREFIX}/share/lambert)
configure_file(${PROJECT_SOURCE_DIR}/src/config.h.in ${PROJECT_SOURCE_DIR}/src/config.h)

add_subdirectory(src)
add_subdirectory(share)

IF(CUNIT_TEST)
	enable_testing()
	add_subdirectory(tests)
ENDIF(CUNIT_TEST)

INCLUDE(InstallRequiredSystemLibraries)


SET(CPACK_DEBIAN_PACKAGE_NAME "liblambert")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "C library to convert Lambert coordinates to WGS84 with IGN Algorithms")
SET(CPACK_PACKAGE_VENDOR "Yannick Heinrich")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_PACKAGE_VERSION_MAJOR "2")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")

SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "yannick.heinrich@gmail.com")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.3.1-6)")
SET(CPACK_PACKAGE_FILE_NAME "liblambert-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
INCLUDE(CPack)